feat: обновление зависимостей и улучшение конфигурации проекта
- Добавлены новые зависимости в requirements.txt для поддержки функционала (Pillow, django-filter, django-extensions, celery, redis, openai, pandas, numpy, python-dateutil, pytz).
- Обновлены настройки Django: изменены параметры SECRET_KEY и DEBUG, добавлены новые приложения в INSTALLED_APPS, улучшены настройки REST Framework.
- Реализованы новые маршруты и улучшена обработка запросов в views.py.
- Обновлены шаблоны писем для использования имени пользователя вместо логина.
- Обновлены стили и компоненты на фронтенде, включая новые зависимости Mantine для улучшения интерфейса.

--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -6,3 +6,13 @@ python-dotenv
 psycopg2-binary
 gunicorn
 requests
+Pillow
+django-filter
+django-extensions
+celery
+redis
+openai
+pandas
+numpy
+python-dateutil
+pytz
