--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,20 +14,31 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@mantine/core": "^8.2.7",
+    "@mantine/carousel": "^8.2.8",
+    "@mantine/core": "^8.2.8",
+    "@mantine/dates": "^8.2.8",
+    "@mantine/dropzone": "^8.2.8",
     "@mantine/form": "^8.2.7",
-    "@mantine/hooks": "^8.2.7",
+    "@mantine/hooks": "^8.2.8",
+    "@mantine/modals": "^8.2.8",
+    "@mantine/notifications": "^8.2.8",
+    "@mantine/nprogress": "^8.2.8",
+    "@mantine/spotlight": "^8.2.8",
+    "@mantine/tiptap": "^8.2.8",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.12",
     "libphonenumber-js": "^1.10.57",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "tailwindcss": "^4.1.12",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
