--- a/frontend/Procfile
+++ b/frontend/Procfile
@@ -1,1 +1,1 @@
-web: sh -lc "npm ci && npm run build && npm run preview -- --port ${PORT:-4173}"
+web: sh -lc "npm ci && npm run build && npm run preview -- --host 0.0.0.0 --port ${PORT:-4173}"
