--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,8 @@
     "react-router-dom": "^6.30.1",
     "tailwindcss": "^4.1.12",
     "yup": "^1.7.0",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
