--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,14 +32,14 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
     "libphonenumber-js": "^1.10.57",
+    "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "tailwindcss": "^4.1.12",
     "yup": "^1.7.0",
-    "zustand": "^5.0.8",
-    "qrcode": "^1.5.3"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
